--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "name": "kevinyoung",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5",
+    "babel-preset-react": "^6.24.1",
+    "bulma": "^0.7.4",
+    "prop-types": "^15.7.1",
+    "rails-erb-loader": "^5.5.2",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-router-dom": "^4.3.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
