--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kevinyoung",
   "private": true,
   "dependencies": {
+    "@material/textfield": "^0.44.1",
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
     "bulma": "^0.7.4",
